stop homepage search box from getting too small in tablet view

--- a/web/static/sass/wtt.scss
+++ b/web/static/sass/wtt.scss
@@ -239,6 +239,11 @@ textarea {
     }
 }
 
+#index-search {
+  text-align: center;
+  min-width: 360px; /* stop input getting too narrow in tablet view */
+}
+
 .error-input {
     background-color: transparent;
 }
